--- a/unidad2.html
+++ b/unidad2.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina web DEGA</title>
-    <link rel="shortcut icon" href="img/LogoPrueba.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Icono_arriba.png
+                                    g" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
