--- a/presentaciones.html
+++ b/presentaciones.html
@@ -59,7 +59,7 @@
     <iframe width="960" height="715" src="https://www.youtube.com/embed/0JNY9i8IqWY" title="Unidad " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </main>
 <footer>
-    <div class="contenedor-footer">https://youtu.be/zmppx2xo8gk
+    <div class="contenedor-footer">
         <div class="content-foo">
             <h4>Telefono</h4>
             <p>8442323069</p>
