--- a/trabajos.html
+++ b/trabajos.html
@@ -519,8 +519,8 @@
        <img 
        width="244"
        height="224"
-       src="paginas/Trabajos/img/pdf.png"
-   /><br>
+       src="paginas/Trabajos/img/pdf.png"/>
+        <br>
         </a>
         <br>
         <br>
@@ -1139,7 +1139,7 @@
             <img 
             width="244"
             height="224"
-            src="paginas/Trabajos/img/pdf.png"
+                 src="paginas/Trabajos/img/pdf.png"/></a>
 </main>
 
 <footer>
